syntax = "proto3";

package authentication_organization;

service AuthenticationOrganizationService {
  rpc RegisterAccountOrganization(RegisterAccountOrganizationRequest) 
  returns (RegisterAccountOrganizationResponse) {}
  
  rpc LoginAccountOrganization(LoginAccountOrganizationRequest) 
  returns (LoginAccountOrganizationResponse) {}
  
  rpc ValidateAccountOrganization(ValidateAccountOrganizationRequest) 
  returns (ValidateAccountOrganizationResponse) {}
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ORGANIZATION = 1;
  ROLE_BASE = 2;
  ROLE_SUPER_ADMIN = 3;
  ROLE_USER = 4;
}

message RegisterAccountOrganizationRequest {
  string displayName = 1;
  string email = 2;
  string password = 3;
}

message RegisterAccountOrganizationResponse {
  Role role = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message LoginAccountOrganizationRequest {
  string id = 1;
  string email = 2;
  string displayName = 3;
  Role role = 4;
}

message LoginAccountOrganizationResponse {
  string access_token = 1;
}

message ValidateAccountOrganizationRequest {
  string email = 1;
  string password = 2;
}

message ValidateAccountOrganizationResponse {
  string id = 1;
  Role role = 2;
  string displayName = 3;
  string email = 4;
  string password = 5;
}
